--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Outfit';
+    font-family: 'Outfit', sans-serif;
     background-color: hsl(217, 54%, 11%);
     display: flex;
     flex-direction: column;
@@ -19,15 +19,14 @@ body {
     max-width: 400px;
     width: 90vw;
     height: 90vh;
-    max-height: 700px;
+    max-height: 800px;
     background-color: hsl(216, 50%, 16%);
     color: #fff;
     display: flex;
     flex-direction: column;
     padding: 25px;
     border-radius: 10px;
-    flex-wrap: wrap;
-    margin-bottom: 10px;;
+    margin-bottom: 10px;
 }
 
 .image-container {
@@ -149,4 +148,27 @@ body {
 .attribution {
     bottom: 20px;
     color: #fff
+}
+
+@media (max-width: 767px) {
+    .container {
+        max-width: 80vw;
+        max-height: 80vh
+    }
+    .container h3 {
+        font-size: 1.2rem;
+        margin: 5px 5px
+    }
+    .container .description {
+        font-size: 0.8rem;
+        margin: 5px;
+        padding: 5px
+
+    }
+    span {
+        font-size: 0.9rem;
+    }
+    .eth {
+        font-size: 1rem;
+    }
 }
